# windows-named-pipes-rs

./: Cargo.toml  LICENSE  rust-toolchain.toml  rustfmt.toml  todo.md
src/: errors.rs  generics.rs  lib.rs  macros.rs  tests.rs  unsafes.rs
src/builder/: mod.rs  modes.rs  unsafes.rs
src/clients/: generics.rs  mod.rs  unsafes.rs
src/handle/: mod.rs  test_read.txt  tests.rs
src/servers/: generics.rs  mod.rs  unsafes.rs
